# chip-8-emulator

./: Cargo.toml  LICENSE  README.md
src/: app.rs  camera.rs  chip8.rs  display.rs  editor.rs  emulator.rs  lib.rs  main.rs  rom.rs  window.rs
src/chip8/: cpu.rs  display.rs  emulator.rs  font.rs  instruction.rs  keypad.rs  memory.rs  mod.rs  operation.rs  register.rs  timer.rs
