[package]
name = "chip-8-emulator"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.7"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", optional = true }

[features]
dynamic = ["bevy/dynamic"]
editor = ["dep:bevy_editor_pls"]
